feature/IVYPORTAL-19991-Use-Linux-for-portal02-server - Fix test