@@ -49,15 +49,14 @@ public class LeaveRequestTest extends BaseTest {
     assertEquals("'To' must be later than 'From'.", leaveRequestPage.clickSubmitAndGetValidationMsg());
   }
 
-  @SuppressWarnings("deprecation")
   @Test
   public void testApproveScenario() {
     leaveRequestPage = startLeaveRequestProcess();
     assertEquals(CREATE_LEAVE_REQUEST_TITLE, leaveRequestPage.getPageTitle());
     String today =
-        LocalDateTime.now().format(DateTimeFormatter.ofPattern(DateTimePattern.DATE_TIME_PATTERN, new Locale("en")));
+        LocalDateTime.now().format(DateTimeFormatter.ofPattern(DateTimePattern.DATE_TIME_PATTERN, Locale.of("en")));
     String yesterday = LocalDateTime.now().minusDays(1)
-        .format(DateTimeFormatter.ofPattern(DateTimePattern.DATE_TIME_PATTERN, new Locale("en")));
+        .format(DateTimeFormatter.ofPattern(DateTimePattern.DATE_TIME_PATTERN, Locale.of("en")));
     leaveRequestPage.waitForIFrameContentVisible();
     leaveRequestPage.enterLeaveRequestInformation("Maternity Leave", yesterday, today,
         TestAccount.ADMIN_USER.getFullName(), "requester comment");
@@ -91,16 +90,15 @@ public class LeaveRequestTest extends BaseTest {
     leaveRequestPage.assertPageTitle(APPROVAL_RESULT_TITLE);
   }
 
-  @SuppressWarnings("deprecation")
   @Test
   public void testRejectScenario() {
     leaveRequestPage = startLeaveRequestProcess();
     leaveRequestPage.assertPageTitle(CREATE_LEAVE_REQUEST_TITLE);
 
     String today =
-        LocalDateTime.now().format(DateTimeFormatter.ofPattern(DateTimePattern.DATE_TIME_PATTERN, new Locale("en")));
+        LocalDateTime.now().format(DateTimeFormatter.ofPattern(DateTimePattern.DATE_TIME_PATTERN, Locale.of("en")));
     String yesterday = LocalDateTime.now().minusDays(1)
-        .format(DateTimeFormatter.ofPattern(DateTimePattern.DATE_TIME_PATTERN, new Locale("en")));
+        .format(DateTimeFormatter.ofPattern(DateTimePattern.DATE_TIME_PATTERN, Locale.of("en")));
     leaveRequestPage.enterLeaveRequestInformation("Maternity Leave", yesterday, today,
         TestAccount.ADMIN_USER.getFullName(), "requester comment");
     leaveRequestPage.clickSubmitButton();
